# upload.py

./: .gitattributes  .gitignore  LICENSE  README.md  TRADEMARKS.md  pyproject.toml  readme.docx  run_upload.bat  upload.ini  upload.py  upload.spec
.githooks/: pre-commit
.github/scripts/: bump_dev_version.py
.github/workflows/: dev-release.yml
config/: config_00_19_32_00_e9_cf.txt  readme.txt
config/config/: config_00_19_32_00_00_01.txt
fw/: onlineupdate.py  readme.txt  version.ini
gude/: deployDev.py  deviceValues.py  file_search.py  firmware_target.py  gblib.py  httpDevice.py  sensor.py
ssl/: cert_00.pem  cert_00_19_32_00_00_01.pem  readme.txt
tests/: test_firmware_target.py
tools/python/: readme.txt
webui/: index.html  server.py
webui/assets/: config.js  theme.min.css  theme.min.js  user.min.css
